[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuhi"
dynamic = ["version"]
description = "A CLI tool to create project structue based on standard and custom templates"
readme = "README.md"
authors = [
    { name = "Rishabh B", email = "null@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["yuhi", "project", "boilerplate"]
dependencies = ["click" ]
requires-python = ">=3.9"
[project.optional-dependencies]
dev = ["pre-commit", "coverage", "pytest"]


[project.scripts]
yuhi = "src.cli:main"

[project.urls]
Homepage = "https://github.com/rsb-23/yuhi"
Repository = "https://github.com/rsb-23/yuhi"
Issues = "https://github.com/rsb-23/yuhi/issues"
Releases = "https://github.com/rsb-23/yuhi/releases"

[tool.hatch.version]
path = "src/__about__.py"
[tool.hatch.build.targets.wheel]
packages = ["src", "templates"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 120
skip-magic-trailing-comma = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E501", "W503"]
exclude = [".git", "__pycache__", "venv"]
per-file-ignores = ["*/__init__.py: F401", "*/imports_.py: F401"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pylint.format]
max-line-length = 120

[tool.coverage.report]
fail_under = 70.0
[tool.coverage.run]
source = [ "src/" ]
