[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuhi"
dynamic = ["version"]
description = "Python CLI toolkit to automate project enhancement using standard config templates."
readme = "README.md"
authors = [
    { name = "Rishabh B", email = "null@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["yuhi", "project", "boilerplate"]
dependencies = ["click", "httpx", "ruamel.yaml~=0.18.10", "toml; python_version < '3.11'"]
requires-python = ">=3.9"

[project.optional-dependencies]
lint = ["pre-commit", "pylint"]
test = ["pytest", "pytest-cov"]

[project.scripts]
yuhi = "src.cli:cli"

[project.urls]
Docs = "https://yuhi.readthedocs.io/"
Repository = "https://github.com/rsb-23/yuhi"
Issues = "https://github.com/rsb-23/yuhi/issues"
Releases = "https://github.com/rsb-23/yuhi/releases"

[tool.hatch.version]
path = "src/__about__.py"
[tool.hatch.build.targets.wheel]
packages = ["src", "templates", "samples"]

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 120
skip-magic-trailing-comma = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E501", "W503"]
exclude = [".git", "__pycache__", ".venv"]
per-file-ignores = ["*/__init__.py: F401"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
split_on_trailing_comma = false

[tool.pylint]
jobs = 2
ignore-paths = ["^(?!^(src|tests?|.+.py)$).+$"]
max-line-length = 130

[tool.pylint.messages_control]
disable = [
    "I",
    "import-error",
    "fixme",
    "missing-docstring",
    "duplicate-code",
    "no-name-in-module"
]

[tool.coverage.report]
fail_under = 75.0
[tool.coverage.run]
source = ["src/"]
